# novabyte_blog_api

./: .env.sample  .gitignore  .surrealdb  Cargo.toml  Env.toml  Jenkinsfile  Makefile.toml  dockerfile  run.sh
.github/workflows/: deploy.yaml
src/: config.rs  constants.rs  controllers.rs  errors.rs  main.rs  middleware.rs  utils.rs
src/controllers/: c_persons.rs  c_posts.rs
src/lib/: constants.rs  db.rs  models.rs  nb_lib.rs  repos.rs  services.rs  utils.rs
src/lib/db/: nova_db.rs
src/lib/db/migrations/: 20240421_150906_add_admin_flag.surql  20240816_235356_add_meta_to_drafted.surql  20241015_184246_add_post_image.surql  20241015_231827_add_visit_count_to_drafts.surql  20241106_154854_store_signed_token.surql
src/lib/db/migrations/definitions/: 20240421_150906_add_admin_flag.json  _initial.json
src/lib/db/schemas/: functions.surql  meta.surql  person.surql  post.surql  script_migration.surql  token.surql
src/lib/models/: base.rs  custom_claims.rs  meta.rs  person.rs  post.rs  token.rs  user.rs
src/lib/repos/: r_meta.rs  r_persons.rs  r_posts.rs
src/lib/services/: s_persons.rs  s_posts.rs
