[package]
name = "nb_blog_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nb_lib"
path = "src/lib/nb_lib.rs"

[dependencies]
axum = "0.6.20"
cargo-make = "0.37.0"
chrono = "0.4.30"
serde = "1.0.188"
serde_json = "1.0.105"
surrealdb = "1.0.0"
tokio = {version = "1.32.0", features = ["full"]}
toml = "0.8.1"
tower = "0.4.13"
tower-http = {version = "0.4.0", features = ["cors"]}
tracing-subscriber = "0.3.17"
uuid = {version = "1.4.1", default-features = true, features=["serde", "v4", "fast-rng", "macro-diagnostics"]}
