[package]
name = "nb_blog_api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nb_lib"
path = "src/lib/nb_lib.rs"

[dependencies]
axum-server = { version = "0.7.1", features = ["tls-rustls", "rustls"] }
argon2 = "0.5.2"
axum = "0.7.4"
axum-extra = { version = "0.9.2", features = ["cookie"] }
cargo-make = "0.37.0"
dotenv = "0.15.0"
futures = "0.3.30"
http-body = "1.0.1"
include_dir = "0.7.4"
itertools = "0.13.0"
jwt-simple = { version = "0.12.9", default-features = false, features = [
    "pure-rust",
] }
rand = "0.8.5"
serde = "1.0.188"
serde_json = "1.0.105"
surrealdb = "2.0.4"
surrealdb-migrations = "2.3.0"
time = { version = "0.3.36", features = ["serde"] }
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.1"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["cors", "trace", "request-id"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
ulid = "1.1.0"
rustls = "0.23.16"
